--- a/client/css/bootstrap.less
+++ b/client/css/bootstrap.less
@@ -18,7 +18,7 @@
 
 // Components
 @import "../bower_components/bootstrap/less/component-animations.less";
-@import "../bower_components/bootstrap/less/glyphicons.less";
+// @import "../bower_components/bootstrap/less/glyphicons.less";
 @import "../bower_components/bootstrap/less/dropdowns.less";
 @import "../bower_components/bootstrap/less/button-groups.less";
 @import "../bower_components/bootstrap/less/input-groups.less";
@@ -48,3 +48,9 @@
 // Utility classes
 @import "../bower_components/bootstrap/less/utilities.less";
 @import "../bower_components/bootstrap/less/responsive-utilities.less";
+
+// use Fontello instead of Glyphicons, you can choose glyphicons on fontello.com
+/// @import (less) "../vendors/fontello/css/fontello.css";
+// use embedded font files if you perfer.
+@import (less) "../vendors/fontello/css/fontello-embedded.css";
+@import (less) "../vendors/fontello/css/animation.css";
